[package]
name = "hmwiz"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
rand_distr = "0.4"
image = "0.24"
noise = { version = "0.8", features = ["images"] }
clap = { version = "4.1", features = ["derive"] }

[features]
default = ["images"]
images = []